<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/white"
        android:padding="16dp">


        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/ic_launcher_foreground"
            android:contentDescription="@string/app_logo"
            android:layout_marginBottom="24dp"/>

        <!-- EditText for Email -->
        <EditText
            android:id="@+id/editLoginTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:layout_marginBottom="16dp"
            android:textColor="@color/black"
            android:padding="12dp" />

        <!-- EditText for Password -->
        <EditText
            android:id="@+id/editLoginTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textColor="@color/black"
            android:padding="12dp"
            android:layout_marginBottom="24dp" />

        <!-- Button for login -->
        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@android:color/black"
            android:background="#322352" />

        <Button
            android:id="@+id/signupButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textColor="#3448B8"
            android:layout_marginTop="24dp"
            android:background="@android:color/transparent"
            android:textStyle="bold"/>



    </LinearLayout>



</RelativeLayout>